# rqt_shell-release

./: CHANGELOG.rst  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  setup.cfg  setup.py  tracks.yaml
debian/: changelog  control  copyright  gbp.conf  rules
rpm/: ros-galactic-rqt-shell.spec  ros-humble-rqt-shell.spec  ros-jazzy-rqt-shell.spec  ros-lyrical-rqt-shell.spec  ros-rolling-rqt-shell.spec  template.spec
src/rqt_shell/: main.py  shell.py  shell_text_edit.py  shell_widget.py  spyder_shell_widget.py  xterm_widget.py
