<package format="2">
  <name>rqt_shell</name>
  <version>1.4.1</version>
  <description>rqt_shell is a Python GUI plugin providing an interactive shell.</description>

  <maintainer email="clalancette@gmail.com">Chris Lalancette</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rqt_shell</url>
  <url type="repository">https://github.com/ros-visualization/rqt_shell</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_shell/issues</url>

  <author>Dorian Scholz</author>
  <author email="kunal_tyagi@yahoo.com">Kunal Tyagi</author>

  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
  <exec_depend>qt_gui</exec_depend>
  <exec_depend>qt_gui_py_common</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <qt_gui plugin="${prefix}/plugin.xml"/>
    <build_type>ament_python</build_type>
  </export>
</package>
